Fix : Settings/store checkbox  alignment fixed

--- a/assets/less/extra.less
+++ b/assets/less/extra.less
@@ -477,11 +477,6 @@ input.tagit-hidden-field {
     }
 }
 
-#dokan_store_tnc_enable{
-    display: inline-block;
-    width: 20px;
-}
-
 .dokan_tock_check {
     width: auto;
 }
