--- a/assets/less/settings.less
+++ b/assets/less/settings.less
@@ -146,5 +146,10 @@
                 font-size: 12px;
             }
         }
+        .dokan-form-group{
+            .checkbox{
+                margin-top: 0px;
+            }
+        }
     }
 }
